# semantic-clone-detection

./: .gitignore  README.md  plugin_server.py  pyproject.toml
clone_detection/: __init__.py
clone_detection/cli/: __init__.py  main.py
clone_detection/embeddings/: __init__.py  graphcodebert.py
clone_detection/indexing/: __init__.py  faiss_index.py
clone_detection/parsers/: __init__.py  language_configs.py  tree_sitter_parser.py
clone_detection/query/: __init__.py  metadata.py  search.py
examples/: __init__.py  api_example.py
tests/: __init__.py  conftest.py  test_cli.py  test_faiss_index.py  test_metadata.py  test_parser.py  test_plugin_server.py  test_search.py  test_threshold_math.py
